--- a/src/app/user/user.css
+++ b/src/app/user/user.css
@@ -8,10 +8,6 @@
     margin-top: 10px;
   }
   
-  .error{
-    color: red;
-  }
-  
-  .success{
-    color: green;
+  .image {
+    width: 100%
   }
